--- a/src/components/MobileNav.scss
+++ b/src/components/MobileNav.scss
@@ -55,6 +55,7 @@
     ul {
       display: flex;
       flex-direction: column;
+      position: relative;
       padding: 0;
       margin: 0;
       width: 100%;
